--- a/src/GUI/DSDanhMuc.form
+++ b/src/GUI/DSDanhMuc.form
@@ -56,7 +56,6 @@
                           <EmptySpace min="-2" pref="40" max="-2" attributes="0"/>
                           <Component id="btnXoa" min="-2" pref="141" max="-2" attributes="0"/>
                           <EmptySpace min="-2" pref="43" max="-2" attributes="0"/>
-
                           <Component id="btnSua" min="-2" pref="149" max="-2" attributes="0"/>
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
@@ -112,7 +111,6 @@
                       <Component id="btnSua" alignment="3" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="24" max="-2" attributes="0"/>
-
               </Group>
           </Group>
         </DimensionLayout>
@@ -225,9 +223,9 @@
           </Events>
         </Component>
         <Component class="javax.swing.JTextField" name="txtTimKiem">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="T&#xec;m ki&#x1ebf;m..."/>
-          </Properties>
+          <Events>
+            <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtTimKiemKeyPressed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel10">
           <Properties>
