--- a/src/GUI/DSNhaCungCap.form
+++ b/src/GUI/DSNhaCungCap.form
@@ -151,11 +151,13 @@
                       <Group type="102" alignment="0" attributes="0">
                           <Component id="jScrollPane2" pref="249" max="32767" attributes="0"/>
                           <EmptySpace min="-2" pref="12" max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="3" attributes="0">
-                              <Component id="btnThem" alignment="3" min="-2" pref="31" max="-2" attributes="0"/>
-                              <Component id="btnXoa" alignment="3" min="-2" pref="31" max="-2" attributes="0"/>
-                              <Component id="btnSua" alignment="3" min="-2" pref="31" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="0" attributes="0">
                               <Component id="jButton1" alignment="1" min="-2" pref="29" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="3" attributes="0">
+                                  <Component id="btnThem" alignment="3" min="-2" pref="31" max="-2" attributes="0"/>
+                                  <Component id="btnXoa" alignment="3" min="-2" pref="31" max="-2" attributes="0"/>
+                                  <Component id="btnSua" alignment="3" min="-2" pref="31" max="-2" attributes="0"/>
+                              </Group>
                           </Group>
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
@@ -224,11 +226,11 @@
         </Component>
         <Component class="javax.swing.JTextField" name="txtTimkiem">
           <Properties>
-            <Property name="text" type="java.lang.String" value="T&#xec;m ki&#x1ebf;m..."/>
             <Property name="toolTipText" type="java.lang.String" value=""/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtTimkiemActionPerformed"/>
+            <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtTimkiemKeyPressed"/>
           </Events>
         </Component>
         <Component class="javax.swing.JTextField" name="txtDiaChi">
