--- a/src/GUI/DSSanPham.form
+++ b/src/GUI/DSSanPham.form
@@ -291,9 +291,9 @@
           </Events>
         </Component>
         <Component class="javax.swing.JTextField" name="txtTimKiem">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="T&#xec;m ki&#x1ebf;m..."/>
-          </Properties>
+          <Events>
+            <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtTimKiemKeyPressed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel9">
           <Properties>
